Fix to .env.example (test commit)

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Env variables used by scripts #
 #################################
 
-TEST_USER={{ADD_YOUR_METAMASK_ADDRESS_HERE}},
+TEST_USER={{ADD_YOUR_METAMASK_ADDRESS_HERE}}
 
 # Set the permit deadline to be a year. This is so that we can advance time locally without
 # accidentally making permits invalid
