Updates to makefile and added setup.sh

--- a/.env.example
+++ b/.env.example
@@ -58,7 +58,7 @@ REACT_APP_POOL_FILTER_LIMIT=200
 # REACT_APP_TOGGLE_THE_GRAPH=true
 
 ##############################################################
-burnUID script variables. Uncomment before running the script
+# burnUID script variables. Uncomment before running the script
 ##############################################################
 # NETWORK=mainnet
 # BURN_ACCOUNT=
