--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build": "npx lerna run --ignore @goldfinch-eng/client2 --ignore @goldfinch-eng/client3 build --stream --scope @goldfinch-eng/protocol && npx lerna run --ignore @goldfinch-eng/client2 --ignore @goldfinch-eng/client3 build --stream --ignore @goldfinch-eng/protocol",
     "build-netlify": "npx lerna run --ignore @goldfinch-eng/client2 --ignore @goldfinch-eng/client3 --ignore @goldfinch-eng/subgraph --ignore @goldfinch-eng/server build --stream --scope @goldfinch-eng/protocol && npx lerna run --ignore @goldfinch-eng/client2 --ignore @goldfinch-eng/client3 --ignore @goldfinch-eng/subgraph --ignore @goldfinch-eng/server build --stream --ignore @goldfinch-eng/protocol",
     "pre-push": "npx lerna run --ignore @goldfinch-eng/client2 --ignore @goldfinch-eng/client3 pre-push --stream --concurrency 1 --since HEAD --exclude-dependents",
-    "pre-commit": "npx lerna run pre-commit --stream --concurrency 1 --since HEAD --exclude-dependents"
+    "pre-commit": "npx lerna run pre-commit --stream --concurrency 1 --since HEAD --exclude-dependents",
+    "start:client3": "npm --prefix packages/client3 run dev"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.1",
