--- a/packages/client3/package.json
+++ b/packages/client3/package.json
@@ -93,6 +93,7 @@
     "postcss": "^8.4.7",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "storybook-dark-mode": "^1.1.0",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
     "typechain": "^7.0.1",
