--- a/packages/client3/.eslintrc.json
+++ b/packages/client3/.eslintrc.json
@@ -3,9 +3,9 @@
   "extends": ["next/core-web-vitals", "plugin:storybook/recommended", "plugin:@typescript-eslint/recommended"],
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-console": ["error", { "allow": ["warn", "error"] }],
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
     "react-hooks/exhaustive-deps": "error",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "warn",
     "import/order": [
       "error",
       {
