--- a/packages/client3/package.json
+++ b/packages/client3/package.json
@@ -10,8 +10,8 @@
     "start": "next start -p 3001",
     "analyze": "ANALYZE=true npm run build",
     "lint": "next lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006 -s ./public",
+    "build-storybook": "build-storybook -s public",
     "gen-contract-types": "typechain --target=ethers-v5 \"abis/*.json\"",
     "codegen": "graphql-codegen",
     "codegen-introspection": "graphql-codegen --config codegen-introspection.js",
@@ -93,6 +93,7 @@
     "postcss": "^8.4.7",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.8",
+    "storybook-addon-next-router": "^4.0.0",
     "storybook-dark-mode": "^1.1.0",
     "tailwindcss": "^3.0.23",
     "ts-node": "^10.7.0",
