Revert "fix some errors inside functions"
This reverts commit d6703aa786bc8de0b7e1eecca2d23b222ba40739.

--- a/packages/functions/.firebaserc
+++ b/packages/functions/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "free-artists-dev",
+    "default": "goldfinch-frontends-dev",
     "dev": "goldfinch-frontends-dev",
     "prod": "goldfinch-frontends-prod"
   }
