--- a/packages/functions/firebase.json
+++ b/packages/functions/firebase.json
@@ -5,16 +5,7 @@
   },
   "functions": {
     "source": ".",
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint",
-      "npm --prefix \"$RESOURCE_DIR\" run build"
-    ],
-    "ignore": [
-      "node_modules",
-      ".git",
-      "firebase-debug.log",
-      "firebase-debug.*.log"
-    ]
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint", "npm --prefix \"$RESOURCE_DIR\" run build"]
   },
   "emulators": {
     "functions": {
