--- a/packages/client3/package.json
+++ b/packages/client3/package.json
@@ -50,6 +50,7 @@
     "next": "12.1.0",
     "persona": "^4.5.0",
     "react": "17.0.2",
+    "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.30.0",
     "react-imask": "^6.4.2",
@@ -80,6 +81,7 @@
     "@typechain/ethers-v5": "^9.0.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "17.0.6",
     "@typescript-eslint/eslint-plugin": "5.13.0",
     "@typescript-eslint/parser": "5.13.0",
