--- a/packages/subgraph/subgraph.yaml
+++ b/packages/subgraph/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: SeniorPoolProxy
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0x8481a6EbAf5c7DABc3F7e09e44A89531fd31F822"
+      address: "0xB87b4FFFAe8a36bBBF5de2283DAD4B9A28026Bbc"
       abi: SeniorPool
-      startBlock: 13096000
+      startBlock: 100330143
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -40,11 +40,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: GoldfinchFactoryProxy
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0xd20508E1E971b80EE172c73517905bfFfcBD87f9"
+      address: "0xC367b9d768067e884CF73Db3b3c7B319dfCE0205"
       abi: GoldfinchFactory
-      startBlock: 11370655
+      startBlock: 100330669
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -75,11 +75,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: PoolProxy
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0xB01b315e32D1D9B5CE93e296D483e1f0aAD39E75"
+      address: "0xf3b3b1A1885fd1698B79443D88Ec00d3FeE012E1"
       abi: Pool_Proxy
-      startBlock: 11370642
+      startBlock: 100329856
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -105,11 +105,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: PoolTokensProxy
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0x57686612C601Cb5213b01AA8e80AfEb24BBd01df"
+      address: "0x6372C493a3FB08256E4d44F34fe65fFD6Dcc27E2"
       abi: PoolTokens_Proxy
-      startBlock: 13097225
+      startBlock: 100329804
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -134,11 +134,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: StakingRewardsProxy
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0xFD6FF39DA508d281C2d255e9bBBfAb34B6be60c3"
+      address: "0xE932322F05aa724b374466bB33FDbfe87555326b"
       abi: StakingRewards_Proxy
-      startBlock: 13941096
+      startBlock: 100330815
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -159,11 +159,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: BackerRewardsProxy
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0x384860F14B39CcD9C89A73519c70cD5f5394D0a6"
+      address: "0x1be4c55102000a60781Cf1a1B643e18E6e9BCA1F"
       abi: BackerRewards_Proxy
-      startBlock: 13942222
+      startBlock: 100330945
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -185,7 +185,7 @@ dataSources:
 templates:
   - name: SeniorPool
     kind: ethereum/contract
-    network: mainnet
+    network: aurora-testnet
     source:
       abi: SeniorPool
     mapping:
@@ -229,7 +229,7 @@ templates:
 
   - name: Pool
     kind: ethereum/contract
-    network: mainnet
+    network: aurora-testnet
     source:
       abi: Pool
     mapping:
@@ -251,7 +251,7 @@ templates:
 
   - name: GoldfinchFactory
     kind: ethereum/contract
-    network: mainnet
+    network: aurora-testnet
     source:
       abi: GoldfinchFactory
     mapping:
@@ -285,7 +285,7 @@ templates:
 
   - name: TranchedPool
     kind: ethereum/contract
-    network: mainnet
+    network: aurora-testnet
     source:
       abi: TranchedPool
     mapping:
@@ -351,7 +351,7 @@ templates:
 
   - name: PoolTokens
     kind: ethereum/contract
-    network: mainnet
+    network: aurora-testnet
     source:
       abi: PoolTokens
     mapping:
@@ -398,7 +398,7 @@ templates:
 
   - name: StakingRewards
     kind: ethereum/contract
-    network: mainnet
+    network: aurora-testnet
     source:
       abi: StakingRewards
     mapping:
@@ -425,7 +425,7 @@ templates:
 
   - name: BackerRewards
     kind: ethereum/contract
-    network: mainnet
+    network: aurora-testnet
     source:
       abi: BackerRewards
     mapping:
