--- a/packages/client3/package.json
+++ b/packages/client3/package.json
@@ -47,10 +47,12 @@
     "ethers": "^5.5.4",
     "graphql": "^16.3.0",
     "html-entities": "^2.3.3",
+    "ipfs-http-client": "^58.0.0",
     "next": "12.1.0",
     "persona": "^4.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^14.2.2",
     "react-hook-form": "^7.30.0",
     "react-imask": "^6.4.2",
     "react-is": "^17.0.2",
