replace goldfinch text and logos with free artists text and logos

--- a/packages/client/public/manifest.json
+++ b/packages/client/public/manifest.json
@@ -4,12 +4,12 @@
   "description": "Goldfinch is a lending protocol built on the blockchain",
   "icons": [
     {
-      "src": "favicon-32x32.png",
+      "src": "favicon-32x32.svg",
       "sizes": "32x32",
-      "type": "image/png"
+      "type": "image/svg"
     }
   ],
-  "iconPath": "favicon-32x32.png",
+  "iconPath": "favicon-32x32.svg",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
