--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -34,13 +34,12 @@
     "bnc-notify": "^1.5.1",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "ethers": "^5.4.4",
+    "express": "^4.17.1",
     "focus-within-polyfill": "^5.1.0",
     "json-loader": "^0.5.7",
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
-    "node-sass": "^6.0.1",
     "path-to-regexp": "^6.2.0",
     "persona": "^3.10.0",
     "prop-types": "^15.7.2",
@@ -54,6 +53,7 @@
     "react-scripts": "^4.0.1",
     "react-tooltip": "^4.2.21",
     "readline": "^1.3.0",
+    "sass": "^1.55.0",
     "styled-components": "^4.4.1",
     "typescript": "^4.4.3",
     "web3": "^1.7.3",
