--- a/packages/client3/package.json
+++ b/packages/client3/package.json
@@ -69,6 +69,7 @@
     "@graphql-codegen/typescript-operations": "^2.4.2",
     "@graphql-codegen/typescript-react-apollo": "^3.2.16",
     "@next/bundle-analyzer": "^12.1.0",
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
@@ -93,6 +94,7 @@
     "eslint-config-next": "12.1.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-storybook": "^0.5.7",
+    "hardhat": "^2.11.2",
     "lint-staged": "^13.0.2",
     "postcss": "^8.4.7",
     "prettier": "^2.7.1",
