--- a/packages/subgraph/docker-compose.yml
+++ b/packages/subgraph/docker-compose.yml
@@ -20,10 +20,11 @@ services:
       # Cf. https://docs.docker.com/compose/environment-variables/#substitute-environment-variables-in-compose-files
       ethereum: "${NETWORK}:${ETHEREUM_NODE_RPC_URL}"
       GRAPH_LOG: info
+    restart: unless-stopped
     deploy:
       resources:
         limits:
-          cpus: '1.0'
+          cpus: "1.0"
           memory: 2048M
   ipfs:
     image: ipfs/js-ipfs:v0.63.2
@@ -38,7 +39,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1.0'
+          cpus: "1.0"
           memory: 2048M
   postgres:
     image: postgres
@@ -54,7 +55,7 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '1.0'
+          cpus: "1.0"
           memory: 2048M
 volumes:
   ipfs-data:
