--- a/packages/client3/.env.example
+++ b/packages/client3/.env.example
@@ -15,3 +15,4 @@ NEXT_PUBLIC_MAINNET_RPC_URL=https://eth-mainnet.alchemyapi.io/v2/<YOUR API KEY>
 # Persona config (Optional) - These are normally determined by NEXT_PUBLIC_NETWORK_NAME, but you can override them here
 # NEXT_PUBLIC_PERSONA_TEMPLATE=""
 # NEXT_PUBLIC_PERSONA_ENVIRONMENT=""
+DISCORD_WEBHOOK_URL=DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/.....
