--- a/packages/client3/package.json
+++ b/packages/client3/package.json
@@ -42,15 +42,18 @@
     "@web3-react/metamask": "8.0.24-beta.0",
     "@web3-react/network": "8.0.23-beta.0",
     "@web3-react/walletconnect": "8.0.31-beta.0",
+    "apollo-link-rest": "^0.9.0-rc.1",
     "apollo-link-scalars": "^4.0.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
     "ethers": "^5.5.4",
     "graphql": "^16.3.0",
+    "graphql-anywhere": "^4.2.7",
     "html-entities": "^2.3.3",
     "ipfs-http-client": "^58.0.0",
     "next": "12.1.0",
     "persona": "^4.5.0",
+    "qs": "^6.11.0",
     "react": "17.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "17.0.2",
