--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 #################################
 
 TEST_USER={{ADD_YOUR_METAMASK_ADDRESS_HERE}}
+PRIVATE_KEY="{{ADD_YOUR_PRIVATE_KEY_HERE}}"
 
 # Set the permit deadline to be a year. This is so that we can advance time locally without
 # accidentally making permits invalid
