--- a/packages/subgraph/subgraph.yaml
+++ b/packages/subgraph/subgraph.yaml
@@ -1,7 +1,6 @@
 specVersion: 0.0.4
-# Had to be disabled because it's not supported on the Decentralized Network
-# features:
-#   - nonFatalErrors
+features:
+  - nonFatalErrors
 schema:
   file: ./schema.graphql
 dataSources:
@@ -16,38 +15,28 @@ dataSources:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
-      file: ./src/mappings/senior_pool.ts
       entities:
         - SeniorPool
         - User
         - SeniorPoolStatus
         - CapitalProviderStatus
       abis:
+        - name: SeniorPool_Implementation
+          file: ./abis/SeniorPool_Implementation.json
+        - name: SeniorPool_Proxy
+          file: ./abis/SeniorPool_Proxy.json
         - name: SeniorPool
           file: ./abis/SeniorPool.json
+        - name: Fidu_Implementation
+          file: ./abis/Fidu_Implementation.json
         - name: Fidu
           file: ./abis/Fidu.json
-        - name: USDC
-          file: ./abis/USDC.json
-        - name: GoldfinchConfig
-          file: ./abis/GoldfinchConfig.json
+        - name: Fidu_Proxy
+          file: ./abis/Fidu_Proxy.json
       eventHandlers:
-        - event: DepositMade(indexed address,uint256,uint256)
-          handler: handleDepositMade
-        - event: InterestCollected(indexed address,uint256)
-          handler: handleInterestCollected
-        - event: InvestmentMadeInJunior(indexed address,uint256)
-          handler: handleInvestmentMadeInJunior
-        - event: InvestmentMadeInSenior(indexed address,uint256)
-          handler: handleInvestmentMadeInSenior
-        - event: PrincipalCollected(indexed address,uint256)
-          handler: handlePrincipalCollected
-        - event: PrincipalWrittenDown(indexed address,int256)
-          handler: handlePrincipalWrittenDown
-        - event: ReserveFundsCollected(indexed address,uint256)
-          handler: handleReserveFundsCollected
-        - event: WithdrawalMade(indexed address,uint256,uint256)
-          handler: handleWithdrawalMade
+        - event: ProxyImplementationUpdated(indexed address,indexed address)
+          handler: handleProxyImplementationUpdated
+      file: ./src/mappings/senior_pool_proxy.ts
 
   - kind: ethereum/contract
     name: GoldfinchFactoryProxy
@@ -60,9 +49,8 @@ dataSources:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
-      file: ./src/mappings/goldfinch_factory.ts
       entities:
-        - TranchedPool
+        - User
       abis:
         - name: TranchedPool
           file: ./abis/TranchedPool.json
@@ -72,13 +60,18 @@ dataSources:
           file: ./abis/CreditLine.json
         - name: GoldfinchConfig
           file: ./abis/GoldfinchConfig.json
+        - name: SeniorPool_Implementation
+          file: ./abis/SeniorPool_Implementation.json
+        - name: SeniorPool_Proxy
+          file: ./abis/SeniorPool_Proxy.json
         - name: SeniorPool
           file: ./abis/SeniorPool.json
-        - name: FixedLeverageRatioStrategy
-          file: ./abis/FixedLeverageRatioStrategy.json
+        - name: CreditLine
+          file: ./abis/CreditLine.json
       eventHandlers:
-        - event: PoolCreated(indexed address,indexed address)
-          handler: handlePoolCreated
+        - event: ProxyImplementationUpdated(indexed address,indexed address)
+          handler: handleProxyImplementationUpdated
+      file: ./src/mappings/goldfinch_factory_proxy.ts
 
   - kind: ethereum/contract
     name: PoolProxy
@@ -89,7 +82,7 @@ dataSources:
       startBlock: 100915718
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       entities:
         - User
@@ -128,26 +121,16 @@ dataSources:
       abis:
         - name: PoolTokens
           file: ./abis/PoolTokens.json
+        - name: PoolTokens_Implementation
+          file: ./abis/PoolTokens_Implementation.json
+        - name: PoolTokens_Proxy
+          file: ./abis/PoolTokens_Proxy.json
         - name: TranchedPool
           file: ./abis/TranchedPool.json
-        - name: GoldfinchConfig
-          file: ./abis/GoldfinchConfig.json
-        - name: SeniorPool
-          file: ./abis/SeniorPool.json
-        - name: CreditLine
-          file: ./abis/CreditLine.json
       eventHandlers:
-        - event: TokenBurned(indexed address,indexed address,indexed uint256)
-          handler: handleTokenBurned
-        - event: TokenMinted(indexed address,indexed address,indexed uint256,uint256,uint256)
-          handler: handleTokenMinted
-        - event: TokenRedeemed(indexed address,indexed address,indexed uint256,uint256,uint256,uint256)
-          handler: handleTokenRedeemed
-        - event: Transfer(indexed address,indexed address,indexed uint256)
-          handler: handleTransfer
-        - event: TokenPrincipalWithdrawn(indexed address,indexed address,indexed uint256,uint256,uint256)
-          handler: handleTokenPrincipalWithdrawn
-      file: ./src/mappings/pool_tokens.ts
+        - event: ProxyImplementationUpdated(indexed address,indexed address)
+          handler: handleProxyImplementationUpdated
+      file: ./src/mappings/pool_tokens_proxy.ts
 
   - kind: ethereum/contract
     name: StakingRewardsProxy
@@ -165,30 +148,14 @@ dataSources:
       abis:
         - name: StakingRewards
           file: ./abis/StakingRewards.json
+        - name: StakingRewards_Implementation
+          file: ./abis/StakingRewards_Implementation.json
+        - name: StakingRewards_Proxy
+          file: ./abis/StakingRewards_Proxy.json
       eventHandlers:
-        - event: RewardAdded(uint256)
-          handler: handleRewardAdded
-        - event: Staked(indexed address,indexed uint256,uint256,uint256,uint256)
-          handler: handleStaked
-        - event: Staked(indexed address,indexed uint256,uint256,uint8,uint256)
-          handler: handleStaked1
-        - event: Unstaked(indexed address,indexed uint256,uint256)
-          handler: handleUnstaked
-        - event: Unstaked(indexed address,indexed uint256,uint256,uint8)
-          handler: handleUnstaked1
-        - event: Transfer(indexed address,indexed address,indexed uint256)
-          handler: handleTransfer
-        - event: DepositedAndStaked(indexed address,uint256,indexed uint256,uint256,uint256,uint256)
-          handler: handleDepositedAndStaked
-        - event: DepositedAndStaked(indexed address,uint256,indexed uint256,uint256)
-          handler: handleDepositedAndStaked1
-        - event: UnstakedAndWithdrew(indexed address,uint256,indexed uint256,uint256)
-          handler: handleUnstakedAndWithdrew
-        - event: UnstakedAndWithdrewMultiple(indexed address,uint256,uint256[],uint256[])
-          handler: handleUnstakedAndWithdrewMultiple
-        - event: RewardPaid(indexed address,indexed uint256,uint256)
-          handler: handleRewardPaid
-      file: ./src/mappings/staking_rewards.ts
+        - event: ProxyImplementationUpdated(indexed address,indexed address)
+          handler: handleProxyImplementationUpdated
+      file: ./src/mappings/staking_rewards_proxy.ts
 
   - kind: ethereum/contract
     name: BackerRewardsProxy
@@ -206,131 +173,116 @@ dataSources:
       abis:
         - name: BackerRewards
           file: ./abis/BackerRewards.json
+        - name: BackerRewards_Implementation
+          file: ./abis/BackerRewards_Implementation.json
+        - name: BackerRewards_Proxy
+          file: ./abis/BackerRewards_Proxy.json
       eventHandlers:
-        - event: BackerRewardsSetTotalRewards(indexed address,uint256,uint256)
-          handler: handleSetTotalRewards
-        - event: BackerRewardsSetMaxInterestDollarsEligible(indexed address,uint256)
-          handler: handleSetMaxInterestDollarsEligible
-        - event: BackerRewardsClaimed(indexed address,indexed uint256,uint256)
-          handler: handleBackerRewardsClaimed
-        - event: BackerRewardsClaimed(indexed address,indexed uint256,uint256,uint256)
-          handler: handleBackerRewardsClaimed1
-      file: ./src/mappings/backer_rewards.ts
+        - event: ProxyImplementationUpdated(indexed address,indexed address)
+          handler: handleProxyImplementationUpdated
+      file: ./src/mappings/backer_rewards_proxy.ts
 
 templates:
   - name: SeniorPool
     kind: ethereum/contract
     network: aurora-testnet
     source:
-      address: "0xba0439088dc1e75F58e0A7C107627942C15cbb41"
-      abi: UniqueIdentity
-      startBlock: 13494815
+      abi: SeniorPool
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
+      file: ./src/mappings/senior_pool.ts
       entities:
+        - SeniorPool
         - User
+        - SeniorPoolStatus
+        - CapitalProviderStatus
       abis:
-        - name: UniqueIdentity
-          file: ./abis/UniqueIdentity.json
+        - name: SeniorPool
+          file: ./abis/SeniorPool.json
+        - name: SeniorPool_Implementation
+          file: ./abis/SeniorPool_Implementation.json
+        - name: Fidu_Implementation
+          file: ./abis/Fidu_Implementation.json
+        - name: Fidu
+          file: ./abis/Fidu.json
+        - name: Fidu_Proxy
+          file: ./abis/Fidu_Proxy.json
       eventHandlers:
-        - event: TransferSingle(indexed address,indexed address,indexed address,uint256,uint256)
-          handler: handleTransferSingle
-      file: ./src/mappings/unique_identity.ts
+        - event: DepositMade(indexed address,uint256,uint256)
+          handler: handleDepositMade
+        - event: InterestCollected(indexed address,uint256)
+          handler: handleInterestCollected
+        - event: InvestmentMadeInJunior(indexed address,uint256)
+          handler: handleInvestmentMadeInJunior
+        - event: InvestmentMadeInSenior(indexed address,uint256)
+          handler: handleInvestmentMadeInSenior
+        - event: PrincipalCollected(indexed address,uint256)
+          handler: handlePrincipalCollected
+        - event: PrincipalWrittenDown(indexed address,int256)
+          handler: handlePrincipalWrittenDown
+        - event: ReserveFundsCollected(indexed address,uint256)
+          handler: handleReserveFundsCollected
+        - event: WithdrawalMade(indexed address,uint256,uint256)
+          handler: handleWithdrawalMade
 
   - name: Pool
     kind: ethereum/contract
     network: aurora-testnet
     source:
-      address: "0x4eb844Ff521B4A964011ac8ecd42d500725C95CC"
-      abi: GoldfinchConfig
-      startBlock: 13096701
+      abi: Pool
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
+      file: ./src/mappings/v1_pool.ts
       entities:
         - User
+        - SeniorPoolDeposit
       abis:
-        - name: GoldfinchConfig
-          file: ./abis/GoldfinchConfig.json
+        - name: Pool
+          file: ./abis/Pool.json
+        - name: Pool_Implementation
+          file: ./abis/Pool_Implementation.json
       eventHandlers:
-        - event: GoListed(indexed address)
-          handler: handleGoListed
-        - event: NoListed(indexed address)
-          handler: handleNoListed
-      file: ./src/mappings/goldfinch_config.ts
+        - event: DepositMade(indexed address,uint256,uint256)
+          handler: handleDepositMade
 
   - name: GoldfinchFactory
     kind: ethereum/contract
     network: aurora-testnet
     source:
-      address: "0x0Cd73c18C085dEB287257ED2307eC713e9Af3460"
-      abi: CommunityRewards
-      startBlock: 13941109
+      abi: GoldfinchFactory
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
       language: wasm/assemblyscript
+      file: ./src/mappings/goldfinch_factory.ts
       entities:
-        - CommunityRewardsToken
         - User
+        - TranchedPool
       abis:
-        - name: CommunityRewards
-          file: ./abis/CommunityRewards.json
+        - name: GoldfinchFactory
+          file: ./abis/GoldfinchFactory.json
+        - name: TranchedPool
+          file: ./abis/TranchedPool.json
+        - name: GoldfinchConfig
+          file: ./abis/GoldfinchConfig.json
+        - name: SeniorPool_Implementation
+          file: ./abis/SeniorPool_Implementation.json
+        - name: SeniorPool_Proxy
+          file: ./abis/SeniorPool_Proxy.json
+        - name: SeniorPool
+          file: ./abis/SeniorPool.json
+        - name: CreditLine
+          file: ./abis/CreditLine.json
+        - name: FixedLeverageRatioStrategy
+          file: ./abis/FixedLeverageRatioStrategy.json
       eventHandlers:
-        - event: Granted(indexed address,indexed uint256,uint256,uint256,uint256,uint256)
-          handler: handleGranted
-        - event: RewardPaid(indexed address,indexed uint256,uint256)
-          handler: handleRewardPaid
-        - event: GrantRevoked(indexed uint256,uint256)
-          handler: handleGrantRevoked
-      file: ./src/mappings/community_rewards.ts
+        - event: PoolCreated(indexed address,indexed address)
+          handler: handlePoolCreated
 
-  - kind: ethereum/contract
-    name: MerkleDistributor
-    network: mainnet
-    source:
-      address: "0x0f306E3f6b2d5ae820d33C284659B29847972d9A"
-      abi: MerkleDistributor
-      startBlock: 13941117
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.6
-      language: wasm/assemblyscript
-      entities:
-        - CommunityRewardsToken
-      abis:
-        - name: MerkleDistributor
-          file: ./abis/MerkleDistributor.json
-      eventHandlers:
-        - event: GrantAccepted(indexed uint256,indexed uint256,indexed address,uint256,uint256,uint256,uint256)
-          handler: handleGrantAccepted
-      file: ./src/mappings/merkle_distributor.ts
-
-  - kind: ethereum/contract
-    name: BackerMerkleDistributor
-    network: mainnet
-    source:
-      address: "0xC442b55A082f7D5F8d8DcDA3d0efF50f47dD0F82"
-      abi: BackerMerkleDistributor
-      startBlock: 14129983
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.6
-      language: wasm/assemblyscript
-      entities:
-        - CommunityRewardsToken
-      abis:
-        - name: BackerMerkleDistributor
-          file: ./abis/BackerMerkleDistributor.json
-      eventHandlers:
-        - event: GrantAccepted(indexed uint256,indexed uint256,indexed address,uint256,uint256,uint256,uint256)
-          handler: handleGrantAccepted
-      file: ./src/mappings/backer_merkle_distributor.ts
-
-templates:
   - name: TranchedPool
     kind: ethereum/contract
     network: aurora-testnet
@@ -345,25 +297,34 @@ templates:
         - User
         - TranchedPool
         - TranchedPoolToken
-        - Transaction
-        - Zap
+        - TranchedPoolBorrowerTransaction
       abis:
         - name: TranchedPool
           file: ./abis/TranchedPool.json
+        - name: Fidu_Implementation
+          file: ./abis/Fidu_Implementation.json
+        - name: Fidu
+          file: ./abis/Fidu.json
+        - name: Fidu_Proxy
+          file: ./abis/Fidu_Proxy.json
         - name: CreditLine
           file: ./abis/CreditLine.json
         - name: PoolTokens
           file: ./abis/PoolTokens.json
+        - name: PoolTokens_Proxy
+          file: ./abis/PoolTokens_Proxy.json
+        - name: PoolTokens_Implementation
+          file: ./abis/PoolTokens_Implementation.json
         - name: GoldfinchConfig
           file: ./abis/GoldfinchConfig.json
+        - name: SeniorPool_Implementation
+          file: ./abis/SeniorPool_Implementation.json
+        - name: SeniorPool_Proxy
+          file: ./abis/SeniorPool_Proxy.json
         - name: SeniorPool
           file: ./abis/SeniorPool.json
         - name: FixedLeverageRatioStrategy
           file: ./abis/FixedLeverageRatioStrategy.json
-        - name: BackerRewards
-          file: ./abis/BackerRewards.json
-        - name: Zapper
-          file: ./abis/Zapper.json
       eventHandlers:
         - event: CreditLineMigrated(indexed address,indexed address)
           handler: handleCreditLineMigrated
@@ -381,6 +342,8 @@ templates:
           handler: handleSliceCreated
         - event: EmergencyShutdown(indexed address)
           handler: handleEmergencyShutdown
+        - event: GoldfinchConfigUpdated(indexed address,address)
+          handler: handleGoldfinchConfigUpdated
         - event: DrawdownMade(indexed address,uint256)
           handler: handleDrawdownMade
         - event: PaymentApplied(indexed address,indexed address,uint256,uint256,uint256,uint256)
@@ -393,7 +356,7 @@ templates:
       abi: PoolTokens
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       file: ./src/mappings/pool_tokens.ts
       entities:
@@ -440,7 +403,7 @@ templates:
       abi: StakingRewards
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       file: ./src/mappings/staking_rewards.ts
       entities:
@@ -467,7 +430,7 @@ templates:
       abi: BackerRewards
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       file: ./src/mappings/backer_rewards.ts
       entities:
