--- a/packages/subgraph/subgraph.yaml
+++ b/packages/subgraph/subgraph.yaml
@@ -1,17 +1,17 @@
 specVersion: 0.0.4
 # Had to be disabled because it's not supported on the Decentralized Network
-# features:
-#   - nonFatalErrors
+features:
+  - nonFatalErrors
 schema:
   file: ./schema.graphql
 dataSources:
   - kind: ethereum/contract
     name: SeniorPool
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0x8481a6EbAf5c7DABc3F7e09e44A89531fd31F822"
+      address: "0x76941Fb15eC56f73c178cf7259a786Ab3196cd9A"
       abi: SeniorPool
-      startBlock: 13096000
+      startBlock: 103147924
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -51,11 +51,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: GoldfinchFactory
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0xd20508E1E971b80EE172c73517905bfFfcBD87f9"
+      address: "0x3fEb6C9815f7d0ba7D5d51151a18f2a7001338b4"
       abi: GoldfinchFactory
-      startBlock: 11370655
+      startBlock: 0x60806040
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -82,11 +82,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: PoolTokens
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0x57686612C601Cb5213b01AA8e80AfEb24BBd01df"
+      address: "0x5e2EE35590963e14aD088d03d26BE43D4cD1182C"
       abi: PoolTokens
-      startBlock: 13097225
+      startBlock: 103147818
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -121,11 +121,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: StakingRewards
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0xFD6FF39DA508d281C2d255e9bBBfAb34B6be60c3"
+      address: "0x6Df6F746A3EaA2da35e74b614AecE548119e1025"
       abi: StakingRewards
-      startBlock: 13941096
+      startBlock: 103148187
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -162,11 +162,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: BackerRewards
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0x384860F14B39CcD9C89A73519c70cD5f5394D0a6"
+      address: "0x2715Bbf7430a0F6771da0Ca922564d4a33bC4229"
       abi: BackerRewards
-      startBlock: 13942222
+      startBlock: 103148298
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -189,11 +189,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: UniqueIdentity
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0xba0439088dc1e75F58e0A7C107627942C15cbb41"
+      address: "0x607Bc295b8E566afeaB7fb2f8fda4580cB9477A1"
       abi: UniqueIdentity
-      startBlock: 13494815
+      startBlock: 103148247
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -210,11 +210,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: GoldfinchConfig
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0x4eb844Ff521B4A964011ac8ecd42d500725C95CC"
+      address: "0xe8fFE75Dc76B335f710b62b8065D19f272cAE3EB"
       abi: GoldfinchConfig
-      startBlock: 13096701
+      startBlock: 103147539
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -233,11 +233,11 @@ dataSources:
 
   - kind: ethereum/contract
     name: CommunityRewards
-    network: mainnet
+    network: aurora-testnet
     source:
-      address: "0x0Cd73c18C085dEB287257ED2307eC713e9Af3460"
+      address: "0xB6Dff489e7202bbB62F5E2a915f0663B564Eb8C1"
       abi: CommunityRewards
-      startBlock: 13941109
+      startBlock: 103148206
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -257,52 +257,10 @@ dataSources:
           handler: handleGrantRevoked
       file: ./src/mappings/community_rewards.ts
 
-  - kind: ethereum/contract
-    name: MerkleDistributor
-    network: mainnet
-    source:
-      address: "0x0f306E3f6b2d5ae820d33C284659B29847972d9A"
-      abi: MerkleDistributor
-      startBlock: 13941117
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.6
-      language: wasm/assemblyscript
-      entities:
-        - CommunityRewardsToken
-      abis:
-        - name: MerkleDistributor
-          file: ./abis/MerkleDistributor.json
-      eventHandlers:
-        - event: GrantAccepted(indexed uint256,indexed uint256,indexed address,uint256,uint256,uint256,uint256)
-          handler: handleGrantAccepted
-      file: ./src/mappings/merkle_distributor.ts
-
-  - kind: ethereum/contract
-    name: BackerMerkleDistributor
-    network: mainnet
-    source:
-      address: "0xC442b55A082f7D5F8d8DcDA3d0efF50f47dD0F82"
-      abi: BackerMerkleDistributor
-      startBlock: 14129983
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.6
-      language: wasm/assemblyscript
-      entities:
-        - CommunityRewardsToken
-      abis:
-        - name: BackerMerkleDistributor
-          file: ./abis/BackerMerkleDistributor.json
-      eventHandlers:
-        - event: GrantAccepted(indexed uint256,indexed uint256,indexed address,uint256,uint256,uint256,uint256)
-          handler: handleGrantAccepted
-      file: ./src/mappings/backer_merkle_distributor.ts
-
 templates:
   - name: TranchedPool
     kind: ethereum/contract
-    network: mainnet
+    network: aurora-testnet
     source:
       abi: TranchedPool
     mapping:
