--- a/packages/client3/.env.example
+++ b/packages/client3/.env.example
@@ -19,4 +19,5 @@ NEXT_PUBLIC_MAINNET_RPC_URL=https://eth-mainnet.alchemyapi.io/v2/<YOUR API KEY>
 # Added for pool approval or other admin actions. Change it every build to be secure
 NEXT_PUBLIC_ADMIN_TOKEN_FOR_API='dummy-token'
 
-DISCORD_WEBHOOK_URL=DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/.....
+# WEAVIK
+DISCORD_WEBHOOK_URL=https://discord.com/
