[FAD-177] UID Fix
- Bunch of logs for GCloud functions.
- Potentially a fix, created a new UID token on a brand new wallet

--- a/packages/functions/.firebaserc
+++ b/packages/functions/.firebaserc
@@ -1,7 +1,7 @@
 {
   "projects": {
     "default": "free-artists",
-    "dev": "goldfinch-frontends-dev",
-    "prod": "goldfinch-frontends-prod"
+    "dev": "free-artists",
+    "prod": "free-artists"
   }
 }
