--- a/packages/client3/package.json
+++ b/packages/client3/package.json
@@ -6,6 +6,7 @@
     "predev": "npx ts-node scripts/populate-contract-addresses.ts && npx ts-node scripts/prepare-metadata.ts && npx ts-node scripts/copy-gfi-grant-files.ts && npm run gen-contract-types && npm run codegen",
     "prebuild": "npx ts-node scripts/populate-contract-addresses.ts && npx ts-node scripts/prepare-metadata.ts && npm run gen-contract-types && npm run codegen",
     "dev": "next dev -p 3000",
+    "prod": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3000",
     "tf-next": "tf-next build",
