--- a/packages/client3/.env.example
+++ b/packages/client3/.env.example
@@ -1,7 +1,7 @@
 # Copy the contents of this file to your .env.local. It will serve as a good baseline to get the app running locally.
 
-# (mainnet | localhost | murmuration) this determines many things: which contract addresses to use, which metadata files to use, which chain ID to allow in the client, which graphQL url to use
-NEXT_PUBLIC_NETWORK_NAME=mainnet
+# (mainnet | localhost | murmuration | aurora_testnet | aurora_mainnet) this determines many things: which contract addresses to use, which metadata files to use, which chain ID to allow in the client, which graphQL url to use
+# NEXT_PUBLIC_NETWORK_NAME=localhost
 
 # If you set this variable, you can override the graphQL url provided via NEXT_PUBLIC_NETWORK_NAME. Use this if you want to test your own private subgraph that indexes mainnet
 # NEXT_PUBLIC_GRAPHQL_URL=https://api.thegraph.com/subgraphs/name/pugbyte/goldfinch
