--- a/packages/client3/package.json
+++ b/packages/client3/package.json
@@ -69,6 +69,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@firebase/app": "^0.9.0",
+    "@firebase/storage": "^0.10.0",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/introspection": "^2.1.1",
     "@graphql-codegen/typescript": "^2.5.1",
@@ -92,6 +94,7 @@
     "@types/react": "17.0.39",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "17.0.6",
+    "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "5.13.0",
     "@typescript-eslint/parser": "5.13.0",
     "autoprefixer": "^10.4.2",
@@ -112,6 +115,7 @@
     "ts-node": "^10.7.0",
     "typechain": "^7.0.1",
     "typescript": "^4.7.4",
+    "uuid": "^9.0.0",
     "webpack": "^5.70.0"
   }
 }
